Fix board preview alignment

--- a/src/assets/styles/cmps/_board-preview.scss
+++ b/src/assets/styles/cmps/_board-preview.scss
@@ -37,7 +37,7 @@
       margin-block-start: 4px;
 
       .workspace-title {
-        margin-inline-start: 4px;
+        margin-inline-start: 6px;
         line-height: em(21px);
         color: rgb(103, 104, 121);
       }
